fixed the grid layout and added some small styles
fixed the layout issues in tablet and desktop, added some more css styling to help the content pop out more, and added hover to allow for the player to know what they can interact with and cannot

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,14 @@ header {
     font-family: "Raleway", sans-serif;
     font-size: 24px;
     letter-spacing: 6px;
-    background-color: rgb(237, 184, 253);
-    color: #5F1785;
+    color: rgb(237, 184, 253);
+    background-color: #100217;
+    border: 1px #000 solid;
+    box-shadow: rgba(0, 0, 0, 0.783) 0px 54px 55px;
+}
+
+h1 {
+    padding-left: 20px;
 }
 
 body {
@@ -26,16 +32,24 @@ body {
     background-position: center;
 }
 
+
 #text-box {
     border: 2px rgb(237, 184, 253) solid;
     border-radius: 30px;
     padding: 10px;
     margin-top: 20px;
-    background-color: #1b1b1b96;
+    background-color: #1b1b1bbc;
+    min-height: 240px;
+    box-shadow: rgba(0, 0, 0, 0.783) 0px 54px 55px;
 }
 
 #text-box h2 {
     font-size: 30px;
+    padding-left: 20px;
+}
+
+#text-box p {
+    padding-left: 20px;
 }
 
 .box {
@@ -50,6 +64,10 @@ body {
     margin: 8px;
     background: rgb(255,154,143);
     background: radial-gradient(circle, rgba(255,154,143,0.5942752100840336) 0%, rgba(76,0,142,1) 100%);
+}
+
+.box-glow:hover {
+    box-shadow: rgb(237, 184, 253) 0px 0px 15px; 
 }
 
 img {
@@ -72,6 +90,7 @@ img {
     padding: 10px;
     margin-top: 20px;
     background-color: #1b1b1b96;
+    box-shadow: rgba(0, 0, 0, 0.783) 0px 54px 55px;
 }
 
 #music-container img {
@@ -89,6 +108,7 @@ img {
     padding: 10px;
     margin-top: 20px;
     background-color: #1b1b1b96;
+    box-shadow: rgba(0, 0, 0, 0.783) 0px 54px 55px;
 }
 
 .drop-board {
@@ -102,6 +122,7 @@ img {
     flex-direction: row;
     justify-content: space-around;
     background-color: #1b1b1b96;
+    box-shadow: rgba(0, 0, 0, 0.783) 0px 54px 55px;
 }
 
 .left {
